--- a/app/src/main/res/layout/listitemmenu.xml
+++ b/app/src/main/res/layout/listitemmenu.xml
@@ -4,8 +4,7 @@
     android:orientation="vertical">
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" android:layout_weight="1"
-        android:id="@+id/">
+        android:orientation="horizontal" android:layout_weight="1">
         <TextView
             android:id="@+id/DaftarMenuMakanan"
             android:layout_width="wrap_content"
@@ -14,5 +13,4 @@
             android:orientation="horizontal"
             android:textStyle="bold" />
     </LinearLayout>
-
 </LinearLayout>
